actions buttons of modal fix

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -91,9 +91,16 @@ li {
 
   .cart-title {
     color: black;
+    border-style: solid;
+    border: 1px;
+    border-color: black;
   }
 
   .teste{
+    color: black;
+  }
+
+  .total{
     color: black;
   }
   
@@ -104,8 +111,7 @@ li {
     border-radius: 8px;
     text-align: center;
   }
-  
-  .checkout-button, .close-button {
+    /* .checkout-button, .close-button {
     background-color: #ff6600;
     color: #fff;
     border: none;
@@ -113,8 +119,25 @@ li {
     border-radius: 5px;
     cursor: pointer;
     margin-top: 10px;
-  }
+  } */
   
   .close-button {
-    background-color: #333;
+    background-color: rgb(19, 67, 210);
+    transition: 0.5s;
   }
+
+  .close-button:hover{
+    background-color: navy;
+    transition: 0.5s
+  }
+
+  
+.actionButtons{
+    background-color: rgb(19, 67, 210);
+    transition: 0.5s;
+}
+
+.actionButtons:hover{
+    background-color: navy;
+    transition: 0.5s;
+}
