--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,9 +1,3 @@
-li {
-  display: flex;
-  color: black;
-  align-items: center;
-}
-
 .back {
   justify-content: start;
   align-items: center;
@@ -50,6 +44,7 @@ li {
 }
 
 .title-navbar {
+  color: black;
   font-size: 20px;
 }
 
@@ -80,12 +75,14 @@ li {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  right: 0;
+  left: 0;
+  bottom: 0;
   background: rgba(0, 0, 0, 0.5);
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 1000;
 }
 
 .cart-title {
@@ -107,7 +104,10 @@ li {
   background: #fff;
   padding: 20px;
   width: 300px;
-  border-radius: 8px;
+  border-radius: 10px;
+  max-height: 80vh;
+  overflow-y: auto;
+  z-index: 1001;
   text-align: center;
 }
 .checkout-button {
@@ -138,4 +138,14 @@ li {
 .actionButtons:hover {
   background-color: navy;
   transition: 0.5s;
+}
+
+.rButton {
+  background-color: red;
+  transition: 0.5s;
+}
+
+.rButton:hover {
+ background-color: darkred;
+ transition: 0.5s;
 }
