--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -70,6 +70,15 @@
   padding-right: 80px;
 }
 
+.shopcart-center {
+  border-right: 30px;
+  color: black;
+  font-size: 20px;
+  text-align: center;
+  width: 50vw;
+  padding-right: 145px;
+}
+
 .bback {
   border: none;
   background-color: white;
